# sementic-image-search-main

./: .gitignore  get_lib_versions.py  main.py  project_structure.py  pyproject.toml  requirements.txt
semantic_image_search/backend/: config.py  embeddings.py  ingestion.py  main.py  qdrant_client.py  query_translator.py  retriever.py
semantic_image_search/backend/exception/: custom_exception.py
semantic_image_search/notebooks/: experiments.ipynb
semantic_image_search/ui/: app.py
